--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -1,5 +1,12 @@
 <div class="mt-5">
-    <h3>ĐĂNG CHƯƠNG TRÌNH</h3>
+
+    <div class="mt-6">
+        <a type="button" class="btn btn-primary" href="/acdm/quan-li">Quản Lý Chương trình</a>
+      
+        <a type="button" class="btn btn-primary" href="">Đăng chương trình</a>
+    </div>
+
+    <h3 class="mt-3">ĐĂNG CHƯƠNG TRÌNH</h3>
     <form method="POSt" action="/acdm/store">
         <div class="mb-3">
             <label for="name" class="form-label">Tên chương trình</label>
