--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -22,7 +22,7 @@
         </div>
         <div class="mb-3">
             <label for="img" class="form-label">Hình ảnh liên quan</label>
-            <input type="file" class="form-control" name="img">
+            <input type="text" class="form-control" name="img">
         </div>
         <div class="mb-3">
             <label for="slug" class="form-label">URL trang chi tiết</label>
