--- a/src/resources/views/chinh-sua.hbs
+++ b/src/resources/views/chinh-sua.hbs
@@ -1,6 +1,6 @@
 <div class="mt-4">
     <h3 class="mt-3">SỬA CHƯƠNG TRÌNH</h3>
-    <form method="POSt" action="/acdm/store" class="mt-4">
+    <form method="POSt" action="/acdm/{{this._id}}?_method=PUT" class="mt-4">
         <div class="mb-3">
             <label for="name" class="form-label">Tên chương trình</label>
             <input type="text" class="form-control" value="{{this.name}}" name="name">
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
             <label for="img" class="form-label">Hình ảnh liên quan</label>
-            <input type="file" class="form-control" name="img" value="{{this.img}}">
+            <input type="text" class="form-control" name="img" value="{{this.img}}">
         </div>
         <div class="mb-3">
             <label for="slug" class="form-label">URL trang chi tiết</label>
