--- a/src/resources/views/chinh-sua.hbs
+++ b/src/resources/views/chinh-sua.hbs
@@ -1,9 +1,9 @@
 <div class="mt-4">
     <h3 class="mt-3">SỬA CHƯƠNG TRÌNH</h3>
-    <form method="POSt" action="/acdm/{{this._id}}?_method=PUT" class="mt-4">
+    <form method="POSt" action="/acdm/{{this._id}}?_method=PUT" enctype="multipart/form-data" class="mt-4" id="frm-update">
         <div class="mb-3">
             <label for="name" class="form-label">Tên chương trình</label>
-            <input type="text" class="form-control" value="{{this.name}}" name="name">
+            <input type="text" class="form-control" value="{{this.name}}" name="name" disabled>
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Mô tả</label>
@@ -14,13 +14,23 @@
             <input type="text" class="form-control" name="link" value="{{this.link}}">
         </div>
         <div class="mb-3">
+            <div class="mt-3 mb-3" style="width: 30%; position:relative">
+                <img style="position: relative; width: 100%; height: 100%;" src="/imgs/{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
+            </div>
             <label for="img" class="form-label">Hình ảnh liên quan</label>
-            <input type="text" class="form-control" name="img" value="{{this.img}}">
+            <input id="img-name" data-id="{{this.nameimg}}" type="text" class="form-label" name="nameimg" value="{{this.nameimg}}" disabled hidden></input>
+            <input type="file" class="form-control" name="img" id="img">
         </div>
-        <div class="mb-3">
-            <label for="slug" class="form-label">URL trang chi tiết</label>
-            <input type="text" class="form-control" name="slug" value="{{this.slug}}">
-        </div>
-        <button type="submit" class="btn btn-primary">Lưu lại</button>
+        
+        <button type="submit" class="btn btn-primary" id="btn-save" data-id="{{this._id}}">Lưu lại</button>
 </form>
 </div>
+<script>
+    var img = document.getElementById('img')
+    var imgName = document.getElementById('img-name')
+    var frmUpData = document.getElementById('frm-update')
+    var btn = document.getElementById('btn-save')
+    img.onchange = () => {
+        frmUpData.action = "/acdm/"+ btn.getAttribute('data-id') +"?_method=PUT&change=true&name=" + imgName.getAttribute('data-id')
+    }
+</script>
