--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -7,6 +7,13 @@
         <title>Shopping Online</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/app.css">
+        <style>
+            image {
+                position: relative;
+                width: 100%;
+                height: 50%;
+            }
+        </style>
     </head>
     <body>
         <div class="app">
