--- a/src/resources/views/progr.hbs
+++ b/src/resources/views/progr.hbs
@@ -8,7 +8,7 @@
                 <img src="/imgs/{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
 
                 <div class="card-body">
-                    <a href="/progr/{{this.link}}">
+                    <a href="{{this.link}}">
                         <h5 class="card-title">{{this.name}}</h5>
                     </a>
                     <p class="card-text">{{this.description}}</p>
