--- a/src/resources/views/progr.hbs
+++ b/src/resources/views/progr.hbs
@@ -5,7 +5,7 @@
         <div class="col-sm-6 col-lg-4" style="margin-top: 20px;">
             <div class="card">
 
-                <img src="/imgs/{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
+                <img src="{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
 
                 <div class="card-body">
                     <a href="{{this.link}}">
