--- a/src/resources/views/chinh-sua.hbs
+++ b/src/resources/views/chinh-sua.hbs
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
             <div class="mt-3 mb-3" style="width: 30%; position:relative">
-                <img style="position: relative; width: 100%; height: 100%;" src="/imgs/{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
+                <img style="position: relative; width: 100%; height: 100%;" src="{{this.nameimg}}" class="card-img-top" title="{{this.name}}">
             </div>
             <label for="img" class="form-label">Hình ảnh liên quan</label>
             <input id="img-name" data-id="{{this.nameimg}}" type="text" class="form-label" name="nameimg" value="{{this.nameimg}}" disabled hidden></input>
